[package]
name = "rfocxt"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "rfocxt"

[dependencies]
base62 = "2.2.1"
cargo_metadata = "0.19.2"
log = "0.4.27"
prettyplease = "0.2.32"
quote = "1.0.40"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.140"
simplelog = "0.12.2"
syn = { version = "2.0.101", features = ["extra-traits", "full"] }
time = "0.3.41"
twox-hash = "2.1.1"
